lab3/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> instruction instructions
Rule 5     instructions -> instruction
Rule 6     instruction -> FOR var = range block
Rule 7     instruction -> WHILE ( condition ) block
Rule 8     instruction -> IF ( condition ) block ELSE block  [precedence=nonassoc, level=2]
Rule 9     instruction -> IF ( condition ) block  [precedence=nonassoc, level=1]
Rule 10    instruction -> statement ;
Rule 11    block -> instruction
Rule 12    block -> { instructions }
Rule 13    range -> num_expr : num_expr
Rule 14    condition -> expr > expr  [precedence=nonassoc, level=3]
Rule 15    condition -> expr < expr  [precedence=nonassoc, level=3]
Rule 16    condition -> expr GREATER_EQUAL expr  [precedence=nonassoc, level=3]
Rule 17    condition -> expr LESS_EQUAL expr  [precedence=nonassoc, level=3]
Rule 18    condition -> expr NOT_EQUAL expr  [precedence=nonassoc, level=3]
Rule 19    condition -> expr EQUAL expr  [precedence=nonassoc, level=3]
Rule 20    assign_op -> =
Rule 21    assign_op -> ADDASSIGN
Rule 22    assign_op -> SUBASSIGN
Rule 23    assign_op -> DIVASSIGN
Rule 24    assign_op -> MULASSIGN
Rule 25    statement -> PRINT print_args
Rule 26    statement -> RETURN expr
Rule 27    statement -> CONTINUE
Rule 28    statement -> BREAK
Rule 29    statement -> element assign_op expr
Rule 30    statement -> var assign_op expr
Rule 31    matrix_function -> matrix_function_name ( INTNUM )
Rule 32    matrix_function_name -> ZEROS
Rule 33    matrix_function_name -> ONES
Rule 34    matrix_function_name -> EYE
Rule 35    matrix -> [ matrix_varargs ]
Rule 36    matrix_varargs -> vector
Rule 37    matrix_varargs -> matrix_varargs , vector
Rule 38    vector -> [ vector_varargs ]
Rule 39    vector_varargs -> INTNUM
Rule 40    vector_varargs -> vector_varargs , INTNUM
Rule 41    element -> matrix_element
Rule 42    element -> vector_element
Rule 43    vector_element -> ID [ INTNUM ]
Rule 44    matrix_element -> ID [ INTNUM , INTNUM ]
Rule 45    var -> ID
Rule 46    expr -> expr '  [precedence=left, level=9]
Rule 47    expr -> - expr  [precedence=right, level=8]
Rule 48    expr -> STRING
Rule 49    expr -> vector_element
Rule 50    expr -> matrix_element
Rule 51    expr -> matrix_function
Rule 52    expr -> matrix
Rule 53    expr -> num_expr
Rule 54    expr -> expr DOTDIV expr  [precedence=left, level=7]
Rule 55    expr -> expr DOTMUL expr  [precedence=left, level=7]
Rule 56    expr -> expr DOTSUB expr  [precedence=left, level=5]
Rule 57    expr -> expr DOTADD expr  [precedence=left, level=5]
Rule 58    expr -> num_expr / num_expr  [precedence=left, level=6]
Rule 59    expr -> num_expr * num_expr  [precedence=left, level=6]
Rule 60    expr -> num_expr - num_expr  [precedence=left, level=4]
Rule 61    expr -> num_expr + num_expr  [precedence=left, level=4]
Rule 62    num_expr -> var
Rule 63    num_expr -> FLOAT
Rule 64    num_expr -> INTNUM
Rule 65    print_args -> expr
Rule 66    print_args -> print_args , expr

Terminals, with rules where they appear:

'                    : 46
(                    : 7 8 9 31
)                    : 7 8 9 31
*                    : 59
+                    : 61
,                    : 37 40 44 66
-                    : 47 60
/                    : 58
:                    : 13
;                    : 10
<                    : 15
=                    : 6 20
>                    : 14
ADDASSIGN            : 21
BREAK                : 28
CONTINUE             : 27
DIVASSIGN            : 23
DOTADD               : 57
DOTDIV               : 54
DOTMUL               : 55
DOTSUB               : 56
ELSE                 : 8
EQUAL                : 19
EYE                  : 34
FLOAT                : 63
FOR                  : 6
GREATER_EQUAL        : 16
ID                   : 43 44 45
IF                   : 8 9
INTNUM               : 31 39 40 43 44 44 64
LESS_EQUAL           : 17
MULASSIGN            : 24
NOT_EQUAL            : 18
ONES                 : 33
PRINT                : 25
RETURN               : 26
STRING               : 48
SUBASSIGN            : 22
WHILE                : 7
ZEROS                : 32
[                    : 35 38 43 44
]                    : 35 38 43 44
error                : 
{                    : 12
}                    : 12

Nonterminals, with rules where they appear:

assign_op            : 29 30
block                : 6 7 8 8 9
condition            : 7 8 9
element              : 29
expr                 : 14 14 15 15 16 16 17 17 18 18 19 19 26 29 30 46 47 54 54 55 55 56 56 57 57 65 66
instruction          : 4 5 11
instructions         : 3 4 12
instructions_opt     : 1
matrix               : 52
matrix_element       : 41 50
matrix_function      : 51
matrix_function_name : 31
matrix_varargs       : 35 37
num_expr             : 13 13 53 58 58 59 59 60 60 61 61
print_args           : 25 66
program              : 0
range                : 6
statement            : 10
var                  : 6 30 62
vector               : 36 37
vector_element       : 42 49
vector_varargs       : 38 40


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . FOR var = range block
    (7) instruction -> . WHILE ( condition ) block
    (8) instruction -> . IF ( condition ) block ELSE block
    (9) instruction -> . IF ( condition ) block
    (10) instruction -> . statement ;
    (25) statement -> . PRINT print_args
    (26) statement -> . RETURN expr
    (27) statement -> . CONTINUE
    (28) statement -> . BREAK
    (29) statement -> . element assign_op expr
    (30) statement -> . var assign_op expr
    (41) element -> . matrix_element
    (42) element -> . vector_element
    (45) var -> . ID
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (43) vector_element -> . ID [ INTNUM ]
    $end            reduce using rule 2 (instructions_opt -> .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    CONTINUE        shift and go to state 12
    BREAK           shift and go to state 13
    ID              shift and go to state 17

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    var                            shift and go to state 6
    statement                      shift and go to state 9
    element                        shift and go to state 14
    matrix_element                 shift and go to state 15
    vector_element                 shift and go to state 16

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    $end            reduce using rule 3 (instructions_opt -> instructions .)


state 4

    (4) instructions -> instruction . instructions
    (5) instructions -> instruction .
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . FOR var = range block
    (7) instruction -> . WHILE ( condition ) block
    (8) instruction -> . IF ( condition ) block ELSE block
    (9) instruction -> . IF ( condition ) block
    (10) instruction -> . statement ;
    (25) statement -> . PRINT print_args
    (26) statement -> . RETURN expr
    (27) statement -> . CONTINUE
    (28) statement -> . BREAK
    (29) statement -> . element assign_op expr
    (30) statement -> . var assign_op expr
    (41) element -> . matrix_element
    (42) element -> . vector_element
    (45) var -> . ID
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (43) vector_element -> . ID [ INTNUM ]
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    PRINT           shift and go to state 10
    RETURN          shift and go to state 11
    CONTINUE        shift and go to state 12
    BREAK           shift and go to state 13
    ID              shift and go to state 17

    instruction                    shift and go to state 4
    instructions                   shift and go to state 18
    var                            shift and go to state 6
    statement                      shift and go to state 9
    element                        shift and go to state 14
    matrix_element                 shift and go to state 15
    vector_element                 shift and go to state 16

state 5

    (6) instruction -> FOR . var = range block
    (45) var -> . ID
    ID              shift and go to state 20

    var                            shift and go to state 19

state 6

    (30) statement -> var . assign_op expr
    (20) assign_op -> . =
    (21) assign_op -> . ADDASSIGN
    (22) assign_op -> . SUBASSIGN
    (23) assign_op -> . DIVASSIGN
    (24) assign_op -> . MULASSIGN
    =               shift and go to state 22
    ADDASSIGN       shift and go to state 23
    SUBASSIGN       shift and go to state 24
    DIVASSIGN       shift and go to state 25
    MULASSIGN       shift and go to state 26

    assign_op                      shift and go to state 21

state 7

    (7) instruction -> WHILE . ( condition ) block
    (               shift and go to state 27


state 8

    (8) instruction -> IF . ( condition ) block ELSE block
    (9) instruction -> IF . ( condition ) block
    (               shift and go to state 28


state 9

    (10) instruction -> statement . ;
    ;               shift and go to state 29


state 10

    (25) statement -> PRINT . print_args
    (65) print_args -> . expr
    (66) print_args -> . print_args , expr
    (46) expr -> . expr '
    (47) expr -> . - expr
    (48) expr -> . STRING
    (49) expr -> . vector_element
    (50) expr -> . matrix_element
    (51) expr -> . matrix_function
    (52) expr -> . matrix
    (53) expr -> . num_expr
    (54) expr -> . expr DOTDIV expr
    (55) expr -> . expr DOTMUL expr
    (56) expr -> . expr DOTSUB expr
    (57) expr -> . expr DOTADD expr
    (58) expr -> . num_expr / num_expr
    (59) expr -> . num_expr * num_expr
    (60) expr -> . num_expr - num_expr
    (61) expr -> . num_expr + num_expr
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (31) matrix_function -> . matrix_function_name ( INTNUM )
    (35) matrix -> . [ matrix_varargs ]
    (62) num_expr -> . var
    (63) num_expr -> . FLOAT
    (64) num_expr -> . INTNUM
    (32) matrix_function_name -> . ZEROS
    (33) matrix_function_name -> . ONES
    (34) matrix_function_name -> . EYE
    (45) var -> . ID
    -               shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 39
    [               shift and go to state 40
    FLOAT           shift and go to state 44
    INTNUM          shift and go to state 41
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    EYE             shift and go to state 47

    print_args                     shift and go to state 30
    expr                           shift and go to state 31
    vector_element                 shift and go to state 34
    matrix_element                 shift and go to state 35
    matrix_function                shift and go to state 36
    matrix                         shift and go to state 37
    num_expr                       shift and go to state 38
    matrix_function_name           shift and go to state 42
    var                            shift and go to state 43

state 11

    (26) statement -> RETURN . expr
    (46) expr -> . expr '
    (47) expr -> . - expr
    (48) expr -> . STRING
    (49) expr -> . vector_element
    (50) expr -> . matrix_element
    (51) expr -> . matrix_function
    (52) expr -> . matrix
    (53) expr -> . num_expr
    (54) expr -> . expr DOTDIV expr
    (55) expr -> . expr DOTMUL expr
    (56) expr -> . expr DOTSUB expr
    (57) expr -> . expr DOTADD expr
    (58) expr -> . num_expr / num_expr
    (59) expr -> . num_expr * num_expr
    (60) expr -> . num_expr - num_expr
    (61) expr -> . num_expr + num_expr
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (31) matrix_function -> . matrix_function_name ( INTNUM )
    (35) matrix -> . [ matrix_varargs ]
    (62) num_expr -> . var
    (63) num_expr -> . FLOAT
    (64) num_expr -> . INTNUM
    (32) matrix_function_name -> . ZEROS
    (33) matrix_function_name -> . ONES
    (34) matrix_function_name -> . EYE
    (45) var -> . ID
    -               shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 39
    [               shift and go to state 40
    FLOAT           shift and go to state 44
    INTNUM          shift and go to state 41
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    EYE             shift and go to state 47

    expr                           shift and go to state 48
    vector_element                 shift and go to state 34
    matrix_element                 shift and go to state 35
    matrix_function                shift and go to state 36
    matrix                         shift and go to state 37
    num_expr                       shift and go to state 38
    matrix_function_name           shift and go to state 42
    var                            shift and go to state 43

state 12

    (27) statement -> CONTINUE .
    ;               reduce using rule 27 (statement -> CONTINUE .)


state 13

    (28) statement -> BREAK .
    ;               reduce using rule 28 (statement -> BREAK .)


state 14

    (29) statement -> element . assign_op expr
    (20) assign_op -> . =
    (21) assign_op -> . ADDASSIGN
    (22) assign_op -> . SUBASSIGN
    (23) assign_op -> . DIVASSIGN
    (24) assign_op -> . MULASSIGN
    =               shift and go to state 22
    ADDASSIGN       shift and go to state 23
    SUBASSIGN       shift and go to state 24
    DIVASSIGN       shift and go to state 25
    MULASSIGN       shift and go to state 26

    assign_op                      shift and go to state 49

state 15

    (41) element -> matrix_element .
    =               reduce using rule 41 (element -> matrix_element .)
    ADDASSIGN       reduce using rule 41 (element -> matrix_element .)
    SUBASSIGN       reduce using rule 41 (element -> matrix_element .)
    DIVASSIGN       reduce using rule 41 (element -> matrix_element .)
    MULASSIGN       reduce using rule 41 (element -> matrix_element .)


state 16

    (42) element -> vector_element .
    =               reduce using rule 42 (element -> vector_element .)
    ADDASSIGN       reduce using rule 42 (element -> vector_element .)
    SUBASSIGN       reduce using rule 42 (element -> vector_element .)
    DIVASSIGN       reduce using rule 42 (element -> vector_element .)
    MULASSIGN       reduce using rule 42 (element -> vector_element .)


state 17

    (45) var -> ID .
    (44) matrix_element -> ID . [ INTNUM , INTNUM ]
    (43) vector_element -> ID . [ INTNUM ]
    =               reduce using rule 45 (var -> ID .)
    ADDASSIGN       reduce using rule 45 (var -> ID .)
    SUBASSIGN       reduce using rule 45 (var -> ID .)
    DIVASSIGN       reduce using rule 45 (var -> ID .)
    MULASSIGN       reduce using rule 45 (var -> ID .)
    [               shift and go to state 50


state 18

    (4) instructions -> instruction instructions .
    $end            reduce using rule 4 (instructions -> instruction instructions .)
    }               reduce using rule 4 (instructions -> instruction instructions .)


state 19

    (6) instruction -> FOR var . = range block
    =               shift and go to state 51


state 20

    (45) var -> ID .
    =               reduce using rule 45 (var -> ID .)
    :               reduce using rule 45 (var -> ID .)
    '               reduce using rule 45 (var -> ID .)
    DOTDIV          reduce using rule 45 (var -> ID .)
    DOTMUL          reduce using rule 45 (var -> ID .)
    DOTSUB          reduce using rule 45 (var -> ID .)
    DOTADD          reduce using rule 45 (var -> ID .)
    ,               reduce using rule 45 (var -> ID .)
    ;               reduce using rule 45 (var -> ID .)
    >               reduce using rule 45 (var -> ID .)
    <               reduce using rule 45 (var -> ID .)
    GREATER_EQUAL   reduce using rule 45 (var -> ID .)
    LESS_EQUAL      reduce using rule 45 (var -> ID .)
    NOT_EQUAL       reduce using rule 45 (var -> ID .)
    EQUAL           reduce using rule 45 (var -> ID .)
    )               reduce using rule 45 (var -> ID .)
    {               reduce using rule 45 (var -> ID .)
    FOR             reduce using rule 45 (var -> ID .)
    WHILE           reduce using rule 45 (var -> ID .)
    IF              reduce using rule 45 (var -> ID .)
    PRINT           reduce using rule 45 (var -> ID .)
    RETURN          reduce using rule 45 (var -> ID .)
    CONTINUE        reduce using rule 45 (var -> ID .)
    BREAK           reduce using rule 45 (var -> ID .)
    ID              reduce using rule 45 (var -> ID .)


state 21

    (30) statement -> var assign_op . expr
    (46) expr -> . expr '
    (47) expr -> . - expr
    (48) expr -> . STRING
    (49) expr -> . vector_element
    (50) expr -> . matrix_element
    (51) expr -> . matrix_function
    (52) expr -> . matrix
    (53) expr -> . num_expr
    (54) expr -> . expr DOTDIV expr
    (55) expr -> . expr DOTMUL expr
    (56) expr -> . expr DOTSUB expr
    (57) expr -> . expr DOTADD expr
    (58) expr -> . num_expr / num_expr
    (59) expr -> . num_expr * num_expr
    (60) expr -> . num_expr - num_expr
    (61) expr -> . num_expr + num_expr
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (31) matrix_function -> . matrix_function_name ( INTNUM )
    (35) matrix -> . [ matrix_varargs ]
    (62) num_expr -> . var
    (63) num_expr -> . FLOAT
    (64) num_expr -> . INTNUM
    (32) matrix_function_name -> . ZEROS
    (33) matrix_function_name -> . ONES
    (34) matrix_function_name -> . EYE
    (45) var -> . ID
    -               shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 39
    [               shift and go to state 40
    FLOAT           shift and go to state 44
    INTNUM          shift and go to state 41
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    EYE             shift and go to state 47

    var                            shift and go to state 43
    expr                           shift and go to state 52
    vector_element                 shift and go to state 34
    matrix_element                 shift and go to state 35
    matrix_function                shift and go to state 36
    matrix                         shift and go to state 37
    num_expr                       shift and go to state 38
    matrix_function_name           shift and go to state 42

state 22

    (20) assign_op -> = .
    -               reduce using rule 20 (assign_op -> = .)
    STRING          reduce using rule 20 (assign_op -> = .)
    ID              reduce using rule 20 (assign_op -> = .)
    [               reduce using rule 20 (assign_op -> = .)
    FLOAT           reduce using rule 20 (assign_op -> = .)
    INTNUM          reduce using rule 20 (assign_op -> = .)
    ZEROS           reduce using rule 20 (assign_op -> = .)
    ONES            reduce using rule 20 (assign_op -> = .)
    EYE             reduce using rule 20 (assign_op -> = .)


state 23

    (21) assign_op -> ADDASSIGN .
    -               reduce using rule 21 (assign_op -> ADDASSIGN .)
    STRING          reduce using rule 21 (assign_op -> ADDASSIGN .)
    ID              reduce using rule 21 (assign_op -> ADDASSIGN .)
    [               reduce using rule 21 (assign_op -> ADDASSIGN .)
    FLOAT           reduce using rule 21 (assign_op -> ADDASSIGN .)
    INTNUM          reduce using rule 21 (assign_op -> ADDASSIGN .)
    ZEROS           reduce using rule 21 (assign_op -> ADDASSIGN .)
    ONES            reduce using rule 21 (assign_op -> ADDASSIGN .)
    EYE             reduce using rule 21 (assign_op -> ADDASSIGN .)


state 24

    (22) assign_op -> SUBASSIGN .
    -               reduce using rule 22 (assign_op -> SUBASSIGN .)
    STRING          reduce using rule 22 (assign_op -> SUBASSIGN .)
    ID              reduce using rule 22 (assign_op -> SUBASSIGN .)
    [               reduce using rule 22 (assign_op -> SUBASSIGN .)
    FLOAT           reduce using rule 22 (assign_op -> SUBASSIGN .)
    INTNUM          reduce using rule 22 (assign_op -> SUBASSIGN .)
    ZEROS           reduce using rule 22 (assign_op -> SUBASSIGN .)
    ONES            reduce using rule 22 (assign_op -> SUBASSIGN .)
    EYE             reduce using rule 22 (assign_op -> SUBASSIGN .)


state 25

    (23) assign_op -> DIVASSIGN .
    -               reduce using rule 23 (assign_op -> DIVASSIGN .)
    STRING          reduce using rule 23 (assign_op -> DIVASSIGN .)
    ID              reduce using rule 23 (assign_op -> DIVASSIGN .)
    [               reduce using rule 23 (assign_op -> DIVASSIGN .)
    FLOAT           reduce using rule 23 (assign_op -> DIVASSIGN .)
    INTNUM          reduce using rule 23 (assign_op -> DIVASSIGN .)
    ZEROS           reduce using rule 23 (assign_op -> DIVASSIGN .)
    ONES            reduce using rule 23 (assign_op -> DIVASSIGN .)
    EYE             reduce using rule 23 (assign_op -> DIVASSIGN .)


state 26

    (24) assign_op -> MULASSIGN .
    -               reduce using rule 24 (assign_op -> MULASSIGN .)
    STRING          reduce using rule 24 (assign_op -> MULASSIGN .)
    ID              reduce using rule 24 (assign_op -> MULASSIGN .)
    [               reduce using rule 24 (assign_op -> MULASSIGN .)
    FLOAT           reduce using rule 24 (assign_op -> MULASSIGN .)
    INTNUM          reduce using rule 24 (assign_op -> MULASSIGN .)
    ZEROS           reduce using rule 24 (assign_op -> MULASSIGN .)
    ONES            reduce using rule 24 (assign_op -> MULASSIGN .)
    EYE             reduce using rule 24 (assign_op -> MULASSIGN .)


state 27

    (7) instruction -> WHILE ( . condition ) block
    (14) condition -> . expr > expr
    (15) condition -> . expr < expr
    (16) condition -> . expr GREATER_EQUAL expr
    (17) condition -> . expr LESS_EQUAL expr
    (18) condition -> . expr NOT_EQUAL expr
    (19) condition -> . expr EQUAL expr
    (46) expr -> . expr '
    (47) expr -> . - expr
    (48) expr -> . STRING
    (49) expr -> . vector_element
    (50) expr -> . matrix_element
    (51) expr -> . matrix_function
    (52) expr -> . matrix
    (53) expr -> . num_expr
    (54) expr -> . expr DOTDIV expr
    (55) expr -> . expr DOTMUL expr
    (56) expr -> . expr DOTSUB expr
    (57) expr -> . expr DOTADD expr
    (58) expr -> . num_expr / num_expr
    (59) expr -> . num_expr * num_expr
    (60) expr -> . num_expr - num_expr
    (61) expr -> . num_expr + num_expr
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (31) matrix_function -> . matrix_function_name ( INTNUM )
    (35) matrix -> . [ matrix_varargs ]
    (62) num_expr -> . var
    (63) num_expr -> . FLOAT
    (64) num_expr -> . INTNUM
    (32) matrix_function_name -> . ZEROS
    (33) matrix_function_name -> . ONES
    (34) matrix_function_name -> . EYE
    (45) var -> . ID
    -               shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 39
    [               shift and go to state 40
    FLOAT           shift and go to state 44
    INTNUM          shift and go to state 41
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    EYE             shift and go to state 47

    condition                      shift and go to state 53
    expr                           shift and go to state 54
    vector_element                 shift and go to state 34
    matrix_element                 shift and go to state 35
    matrix_function                shift and go to state 36
    matrix                         shift and go to state 37
    num_expr                       shift and go to state 38
    matrix_function_name           shift and go to state 42
    var                            shift and go to state 43

state 28

    (8) instruction -> IF ( . condition ) block ELSE block
    (9) instruction -> IF ( . condition ) block
    (14) condition -> . expr > expr
    (15) condition -> . expr < expr
    (16) condition -> . expr GREATER_EQUAL expr
    (17) condition -> . expr LESS_EQUAL expr
    (18) condition -> . expr NOT_EQUAL expr
    (19) condition -> . expr EQUAL expr
    (46) expr -> . expr '
    (47) expr -> . - expr
    (48) expr -> . STRING
    (49) expr -> . vector_element
    (50) expr -> . matrix_element
    (51) expr -> . matrix_function
    (52) expr -> . matrix
    (53) expr -> . num_expr
    (54) expr -> . expr DOTDIV expr
    (55) expr -> . expr DOTMUL expr
    (56) expr -> . expr DOTSUB expr
    (57) expr -> . expr DOTADD expr
    (58) expr -> . num_expr / num_expr
    (59) expr -> . num_expr * num_expr
    (60) expr -> . num_expr - num_expr
    (61) expr -> . num_expr + num_expr
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (31) matrix_function -> . matrix_function_name ( INTNUM )
    (35) matrix -> . [ matrix_varargs ]
    (62) num_expr -> . var
    (63) num_expr -> . FLOAT
    (64) num_expr -> . INTNUM
    (32) matrix_function_name -> . ZEROS
    (33) matrix_function_name -> . ONES
    (34) matrix_function_name -> . EYE
    (45) var -> . ID
    -               shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 39
    [               shift and go to state 40
    FLOAT           shift and go to state 44
    INTNUM          shift and go to state 41
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    EYE             shift and go to state 47

    condition                      shift and go to state 55
    expr                           shift and go to state 54
    vector_element                 shift and go to state 34
    matrix_element                 shift and go to state 35
    matrix_function                shift and go to state 36
    matrix                         shift and go to state 37
    num_expr                       shift and go to state 38
    matrix_function_name           shift and go to state 42
    var                            shift and go to state 43

state 29

    (10) instruction -> statement ; .
    FOR             reduce using rule 10 (instruction -> statement ; .)
    WHILE           reduce using rule 10 (instruction -> statement ; .)
    IF              reduce using rule 10 (instruction -> statement ; .)
    PRINT           reduce using rule 10 (instruction -> statement ; .)
    RETURN          reduce using rule 10 (instruction -> statement ; .)
    CONTINUE        reduce using rule 10 (instruction -> statement ; .)
    BREAK           reduce using rule 10 (instruction -> statement ; .)
    ID              reduce using rule 10 (instruction -> statement ; .)
    $end            reduce using rule 10 (instruction -> statement ; .)
    }               reduce using rule 10 (instruction -> statement ; .)
    ELSE            reduce using rule 10 (instruction -> statement ; .)


state 30

    (25) statement -> PRINT print_args .
    (66) print_args -> print_args . , expr
    ;               reduce using rule 25 (statement -> PRINT print_args .)
    ,               shift and go to state 56


state 31

    (65) print_args -> expr .
    (46) expr -> expr . '
    (54) expr -> expr . DOTDIV expr
    (55) expr -> expr . DOTMUL expr
    (56) expr -> expr . DOTSUB expr
    (57) expr -> expr . DOTADD expr
    ,               reduce using rule 65 (print_args -> expr .)
    ;               reduce using rule 65 (print_args -> expr .)
    '               shift and go to state 57
    DOTDIV          shift and go to state 58
    DOTMUL          shift and go to state 59
    DOTSUB          shift and go to state 60
    DOTADD          shift and go to state 61


state 32

    (47) expr -> - . expr
    (46) expr -> . expr '
    (47) expr -> . - expr
    (48) expr -> . STRING
    (49) expr -> . vector_element
    (50) expr -> . matrix_element
    (51) expr -> . matrix_function
    (52) expr -> . matrix
    (53) expr -> . num_expr
    (54) expr -> . expr DOTDIV expr
    (55) expr -> . expr DOTMUL expr
    (56) expr -> . expr DOTSUB expr
    (57) expr -> . expr DOTADD expr
    (58) expr -> . num_expr / num_expr
    (59) expr -> . num_expr * num_expr
    (60) expr -> . num_expr - num_expr
    (61) expr -> . num_expr + num_expr
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (31) matrix_function -> . matrix_function_name ( INTNUM )
    (35) matrix -> . [ matrix_varargs ]
    (62) num_expr -> . var
    (63) num_expr -> . FLOAT
    (64) num_expr -> . INTNUM
    (32) matrix_function_name -> . ZEROS
    (33) matrix_function_name -> . ONES
    (34) matrix_function_name -> . EYE
    (45) var -> . ID
    -               shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 39
    [               shift and go to state 40
    FLOAT           shift and go to state 44
    INTNUM          shift and go to state 41
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    EYE             shift and go to state 47

    expr                           shift and go to state 62
    vector_element                 shift and go to state 34
    matrix_element                 shift and go to state 35
    matrix_function                shift and go to state 36
    matrix                         shift and go to state 37
    num_expr                       shift and go to state 38
    matrix_function_name           shift and go to state 42
    var                            shift and go to state 43

state 33

    (48) expr -> STRING .
    '               reduce using rule 48 (expr -> STRING .)
    DOTDIV          reduce using rule 48 (expr -> STRING .)
    DOTMUL          reduce using rule 48 (expr -> STRING .)
    DOTSUB          reduce using rule 48 (expr -> STRING .)
    DOTADD          reduce using rule 48 (expr -> STRING .)
    ,               reduce using rule 48 (expr -> STRING .)
    ;               reduce using rule 48 (expr -> STRING .)
    >               reduce using rule 48 (expr -> STRING .)
    <               reduce using rule 48 (expr -> STRING .)
    GREATER_EQUAL   reduce using rule 48 (expr -> STRING .)
    LESS_EQUAL      reduce using rule 48 (expr -> STRING .)
    NOT_EQUAL       reduce using rule 48 (expr -> STRING .)
    EQUAL           reduce using rule 48 (expr -> STRING .)
    )               reduce using rule 48 (expr -> STRING .)


state 34

    (49) expr -> vector_element .
    '               reduce using rule 49 (expr -> vector_element .)
    DOTDIV          reduce using rule 49 (expr -> vector_element .)
    DOTMUL          reduce using rule 49 (expr -> vector_element .)
    DOTSUB          reduce using rule 49 (expr -> vector_element .)
    DOTADD          reduce using rule 49 (expr -> vector_element .)
    ,               reduce using rule 49 (expr -> vector_element .)
    ;               reduce using rule 49 (expr -> vector_element .)
    >               reduce using rule 49 (expr -> vector_element .)
    <               reduce using rule 49 (expr -> vector_element .)
    GREATER_EQUAL   reduce using rule 49 (expr -> vector_element .)
    LESS_EQUAL      reduce using rule 49 (expr -> vector_element .)
    NOT_EQUAL       reduce using rule 49 (expr -> vector_element .)
    EQUAL           reduce using rule 49 (expr -> vector_element .)
    )               reduce using rule 49 (expr -> vector_element .)


state 35

    (50) expr -> matrix_element .
    '               reduce using rule 50 (expr -> matrix_element .)
    DOTDIV          reduce using rule 50 (expr -> matrix_element .)
    DOTMUL          reduce using rule 50 (expr -> matrix_element .)
    DOTSUB          reduce using rule 50 (expr -> matrix_element .)
    DOTADD          reduce using rule 50 (expr -> matrix_element .)
    ,               reduce using rule 50 (expr -> matrix_element .)
    ;               reduce using rule 50 (expr -> matrix_element .)
    >               reduce using rule 50 (expr -> matrix_element .)
    <               reduce using rule 50 (expr -> matrix_element .)
    GREATER_EQUAL   reduce using rule 50 (expr -> matrix_element .)
    LESS_EQUAL      reduce using rule 50 (expr -> matrix_element .)
    NOT_EQUAL       reduce using rule 50 (expr -> matrix_element .)
    EQUAL           reduce using rule 50 (expr -> matrix_element .)
    )               reduce using rule 50 (expr -> matrix_element .)


state 36

    (51) expr -> matrix_function .
    '               reduce using rule 51 (expr -> matrix_function .)
    DOTDIV          reduce using rule 51 (expr -> matrix_function .)
    DOTMUL          reduce using rule 51 (expr -> matrix_function .)
    DOTSUB          reduce using rule 51 (expr -> matrix_function .)
    DOTADD          reduce using rule 51 (expr -> matrix_function .)
    ,               reduce using rule 51 (expr -> matrix_function .)
    ;               reduce using rule 51 (expr -> matrix_function .)
    >               reduce using rule 51 (expr -> matrix_function .)
    <               reduce using rule 51 (expr -> matrix_function .)
    GREATER_EQUAL   reduce using rule 51 (expr -> matrix_function .)
    LESS_EQUAL      reduce using rule 51 (expr -> matrix_function .)
    NOT_EQUAL       reduce using rule 51 (expr -> matrix_function .)
    EQUAL           reduce using rule 51 (expr -> matrix_function .)
    )               reduce using rule 51 (expr -> matrix_function .)


state 37
